--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
     rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -18,7 +23,7 @@
   <header>
     <nav>
       <div class="logo">
-        <h2>Ma<span class="orange">r</span>y</h2>
+        <h2>Za<span class="orange">M</span>an</h2>
       </div>
 
       <ul class="menu">
@@ -32,16 +37,16 @@
     <section id="banner">
       <div class="banner-content">
         <h2>Hi, I am</h2>
-        <h1>Mary Hardy</h1>
+        <h1>Rashed Zaman</h1>
         <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved
           moments.</p>
         <div>
-          <button class="btn">Download</button>
-          <button class="btn">Contact</button>
+          <button class="btn"><i class="fa-solid fa-download"></i> Download</button>
+          <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
       </div>
       <div class="banner-image">
-        <img src="images/hardy.png" alt="">
+        <img src="images/rahi_logo.png" alt="">
       </div>
     </section>
   </header>
@@ -52,28 +57,31 @@
     <div class="about-container">
       <div class="section-heading">
         <h2>About Me</h2>
-        <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
-          websites that
-          provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with
-          me.
-          Delivering work within time and budget which meets clients requirements in our mata.</p>
+        <p>"Hi, I’m Zaman. I turn complex problems into elegant web solutions. With a deep understanding of React and
+          Tailwind, I build high-performance front-end interfaces, while my experience with MongoDB ensures robust data
+          management
+          on the backend.
+
+          Whether it's a dynamic web app or a pixel-perfect landing page, I focus on clean code and seamless user
+          journeys. Ready
+          to bring the next big idea to life."</p>
       </div>
       <div class="about-info">
         <div class="info-card">
           <p>Name:</p>
-          <h4>Mary Hardy</h4>
+          <h4>Rashed Zaman</h4>
         </div>
         <div class="info-card">
           <p>Email:</p>
-          <h4>info@gmail.com</h4>
+          <h4>rsdrahi13@gmail.com</h4>
         </div>
         <div class="info-card">
           <p>Date of birth:</p>
-          <h4>11 November 1987</h4>
+          <h4>12 December 2002</h4>
         </div>
         <div class="info-card">
           <p>From:</p>
-          <h4>Los Angeles, USA</h4>
+          <h4>Sylhet, BANGLADESH</h4>
         </div>
       </div>
     </div>
@@ -86,40 +94,40 @@
     <div class="skills-container">
       <div class="section-heading">
         <h2>What I do</h2>
-        <p>I have more than 10 years experience building software for clients all over the world. Below is a quick
-          overview of my
-          main technical skill sets and technologies i use. Want to find out more about my experience? Check out my
-          online resume
-          and project portfolio.</p>
+        <p>"I am a passionate Junior Full-Stack Web Developer recently trained through Programming Hero. I specialize in
+          building
+          responsive, user-friendly web applications using the MERN stack. I love turning ideas into code and am always
+          eager to
+          learn new technologies to solve real-world problems.".</p>
       </div>
       <div class="skill-box">
         <div class="skill-card">
           <img src="images/icons/js.png" alt="JS icon">
           <h3>Vanilla JavaScript</h3>
-          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
-            available.
-            Aenean commodo ligula eget dolor.</p>
+          <p>"The core of my development. I focus on writing clean, functional ES6+ code, manipulating the DOM, and
+            handling
+            asynchronous operations to create interactive web experiences."</p>
         </div>
         <div class="skill-card">
           <img src="images/icons/react.png" alt="React">
           <h3>React</h3>
-          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
-            available.
-            Aenean commodo ligula eget dolor.</p>
+          <p>"I build dynamic and efficient User Interfaces using a component-based architecture. I’m comfortable with
+            React Hooks,
+            State Management, and building single-page applications (SPAs)."</p>
         </div>
         <div class="skill-card">
           <img src="images/icons/nodejs.png" alt="Nodejs">
           <h3>Node.js</h3>
-          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
-            available.
-            Aenean commodo ligula eget dolor.</p>
+          <p>"I handle the server-side logic and API integration. I enjoy building scalable back-end services that
+            connect seamlessly
+            with front-end components and external databases."</p>
         </div>
         <div class="skill-card">
           <img src="images/icons/mongo.png" alt="MongoBD">
           <h3>MongoDB</h3>
-          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
-            available.
-            Aenean commodo ligula eget dolor.</p>
+          <p>"I work with NoSQL databases to store and manage application data. I am proficient in CRUD operations and
+            integrating
+            database schemas with a Node/Express environment."</p>
         </div>
       </div>
     </div>
@@ -135,55 +143,94 @@
       <div class="education">
         <h2 class="section-title">My Education</h2>
         <div class="resume-card">
-          <h3 class="card-title">Master in Computer Engineering</h3>
-          <p class="card-info">Harvard University / 2015 - 2017</p>
-          <p class="card-text">List skill/technologies here. You can change the icon above
-            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          <h3 class="card-title">Programing Hero Bootcamp</h3>
+          <p class="card-info">Online Course / 2026 to Continue</p>
+          <p class="card-text">"Completed an intensive full-stack development program focusing on the MERN stack.
+            Developed hands-on expertise in HTML,
+            CSS, JavaScript, React"</p>
         </div>
         <hr>
         <div class="resume-card">
-          <h3 class="card-title">Master in Computer Engineering</h3>
-          <p class="card-info">Harvard University / 2015 - 2017</p>
-          <p class="card-text">List skill/technologies here. You can change the icon above
-            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          <h3 class="card-title">Diploma in Computer Engineering</h3>
+          <p class="card-info">Moulvibazar Polytenic Institute / 2019 - 2024</p>
+          <p class="card-text">"Acquired a strong foundation in computer science fundamentals, hardware, and software
+            engineering principles at
+            Moulvibazar Polytechnic Institute."</p>
         </div>
         <hr>
         <div class="resume-card">
-          <h3 class="card-title">Master in Computer Engineering</h3>
-          <p class="card-info">Harvard University / 2015 - 2017</p>
-          <p class="card-text">List skill/technologies here. You can change the icon above
-            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          <h3 class="card-title">BSC in CSE</h3>
+          <p class="card-info">NEU Sylhet / 2025 to Continue</p>
+          <p class="card-text">"Currently pursuing a Bachelor of Science in Computer Science and Engineering to deepen
+            my knowledge of advanced
+            algorithms, system architecture, and software development lifecycles."</p>
         </div>
         <hr>
       </div>
       <div class="experience">
         <h2 class="section-title">My Experience</h2>
         <div class="resume-card">
-          <h3 class="card-title">Master in Computer Engineering</h3>
-          <p class="card-info">Harvard University / 2015 - 2017</p>
-          <p class="card-text">List skill/technologies here. You can change the icon above
-            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          <h3 class="card-title">Data Entry Specialist</h3>
+          <p class="card-info">Staff India Sylhet / 2024 - 2025 </p>
+          <p class="card-text">"Managed large datasets with high accuracy and efficiency at Staff India Sylhet.
+            Developed strong attention to detail
+            and improved organizational workflows using digital productivity tools."</p>
         </div>
         <hr>
         <div class="resume-card">
-          <h3 class="card-title">Master in Computer Engineering</h3>
-          <p class="card-info">Harvard University / 2015 - 2017</p>
-          <p class="card-text">List skill/technologies here. You can change the icon above
-            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          <h3 class="card-title">HTML Developer</h3>
+          <p class="card-info"> Sylhet / 2022 - 2023</p>
+          <p class="card-text">"Focused on converting design mockups into clean, semantic HTML and CSS code. Ensured
+            cross-browser compatibility and
+            mobile responsiveness for various web layouts."</p>
         </div>
         <hr>
         <div class="resume-card">
-          <h3 class="card-title">Master in Computer Engineering</h3>
-          <p class="card-info">Harvard University / 2015 - 2017</p>
-          <p class="card-text">List skill/technologies here. You can change the icon above
-            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          <h3 class="card-title">Jr. Font end Developer</h3>
+          <p class="card-info"> Sylhet / 2025 to Continue</p>
+          <p class="card-text">"Currently building modern, interactive user interfaces using React and Tailwind CSS.
+            Collaborating on the development
+            of dynamic web applications with a focus on component-based architecture."</p>
         </div>
         <hr>
       </div>
     </div>
+
+    <div class="text-center">
+      <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+    </div>
   </section>
 
-  
+  <!-- Footer -->
+
+  <footer>
+    <section class="footer-container">
+      <div class="social">
+        <h2>Let's Connect</h2>
+        <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday
+          through
+          Friday.</p>
+        <div class="icons">
+          <a href=""><img src="images/icons/facebook.png" alt=""></a>
+          <a href=""><img src="images/icons/twitter.png" alt=""></a>
+          <a href=""><img src="images/icons/insta.png" alt=""></a>
+        </div>
+      </div>
+      <form class="form">
+        <h2>Let’s Message me</h2>
+        <div>
+          <input type="text" name="" id="" placeholder="Your Name">
+        </div>
+        <div>
+          <input type="text" name="" id="" placeholder="Your Email">
+        </div>
+        <div>
+          <textarea rows="10" name="" id="" placeholder="Message"></textarea>
+        </div>
+        <button class="btn" type="submit">Submit</button>
+      </form>
+    </section>
+  </footer>
 </body>
 
 </html>
